--- a/EECIP/Views/Home/Index.cshtml
+++ b/EECIP/Views/Home/Index.cshtml
@@ -26,10 +26,10 @@
             <div class="col-md-7">
                 <p>&nbsp;</p>
                 <p class="" style="font-size:16px; padding-top:20px; padding-bottom:20px;">
-                    The e-Enterprise Community Inventory Platform is an <strong style="color:#">online community</strong> and <strong style="color:#">living project inventory</strong> for e-Enterprise State and Tribal participant members across the US.
+                    The E-Enterprise Community Inventory Platform is an <strong>online community</strong> and <strong>living project inventory</strong> for E-Enterprise State and Tribal participant members across the US.
                 </p>
                 <p class="" style="font-size:16px; padding-top:20px; padding-bottom:20px;">
-                    The inventory has a broad focus, including <strong style="color:#">IT, process improvement, and advanced monitoring</strong>, along with traditional topics such as <strong style="color:#">Exchange Network Nodes and dataflows</strong>.
+                    The inventory has a broad focus, including <strong>IT, process improvement, and advanced monitoring</strong>, along with traditional topics such as <strong>Exchange Network Nodes and dataflows</strong>.
                 </p>
             </div>
             <div class="col-sm-3">
