--- a/EECIP/Views/Account/Notifications.cshtml
+++ b/EECIP/Views/Account/Notifications.cshtml
@@ -37,7 +37,7 @@
                                 @Html.DisplayFor(modelItem => item.NOTIFY_TITLE)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.NOTIFY_DESC)
+                                @Html.Raw(item.NOTIFY_DESC)
                             </td>
                         </tr>
                     }
