--- a/EECIP/Views/Shared/_LayoutLogin.cshtml
+++ b/EECIP/Views/Shared/_LayoutLogin.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="e-Enterprise Community Inventory Platform" />
+    <meta name="description" content="E-Enterprise Community Inventory Platform" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewBag.Title - EECIP</title>
     <link rel="icon" type="image/png" sizes="96x96" href="@Url.Content("~/Content/Images/favicon-96x96.png")">
@@ -22,10 +22,11 @@
         gtag('config', 'UA-108934202-1');
     </script>
 
+
 </head>
 <body class="login example1"  >
     <div class="main-login col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
-        <div class="logo">e-Enterprise Community Inventory Platform</div>
+        <div class="logo">E-Enterprise Community Inventory Platform</div>
         <div class="box-login" style="display: block;">
             <section class="panel panel-default bg-white m-t-lg">
                 <header class="panel-heading text-center">
