--- a/EECIP/Views/Shared/_LeftMenu.cshtml
+++ b/EECIP/Views/Shared/_LeftMenu.cshtml
@@ -20,16 +20,16 @@
         <li class="lvl1 @Html.ActivePage("Dashboard", "Search")">
             <a href="@Url.Action("Search","Dashboard")">
                 <i class="clip-search-3"></i>
-                <span class="title">Search & Browse</span><span class="selected"></span>
+                <span class="title">Search Inventory</span><span class="selected"></span>
             </a>
         </li>
-        <li>
+        <li class="open">
             <a href="javascript:void(0)">
                 <i class="clip-pencil-3"></i>
                 <span class="title">Edit Profiles </span><i class="icon-arrow"></i>
                 <span class="selected"></span>
             </a>
-            <ul class="sub-menu">
+            <ul class="sub-menu" style="display:block;">
                 <li class="@Html.ActivePage("Account", "UserProfile")">
                     <a href="@Url.Action("UserProfile", "Account", new { id = db_Accounts.GetUserIDX() })">
                         <span class="title">User Profile </span>
@@ -56,87 +56,91 @@
         <li>
             <a href="@Url.Action("Index","Forum")">
                 <i class="clip-question"></i>
-                <span class="title">Forum </span><span class="selected"></span>
+                <span class="title">Discussion </span><span class="selected"></span>
             </a>
         </li>
 
         @if (User.IsInRole("Admins"))
-    {
-        <li>
-            <a href="javascript:;">
-                <i class="clip-cog-2"></i>
-                <span class="title">Administration</span>
-                <i class="icon-arrow"></i>
-            </a>
-            <ul class="sub-menu">
-                <li class="@Html.ActivePage("Admin", "Users")">
-                    <a href="@Url.Action("Users","Admin")">
-                        <span class="title">Users </span>
-                    </a>
-                </li>
-                <li class="@Html.ActivePage("Admin", "Roles")">
-                    <a href="@Url.Action("Roles","Admin")">
-                        <span class="title">Roles </span>
-                    </a>
-                </li>
-                <li class="@Html.ActivePage("Admin", "Ref")">
-                    <a href="javascript:;">
-                        <span class="title">Reference Data</span>
-                        <i class="icon-arrow"></i>
-                    </a>
-                    <ul class="sub-menu">
-                        <li class="lvl3 @Html.ActivePage("Admin", "RefAgencies")">
-                            <a href="@Url.Action("RefAgencies","Admin")">
-                                <span class="title">Agencies List </span>
-                            </a>
-                        </li>
-                        <li class="lvl3 @Html.ActivePage("Admin", "RefEntServices")">
-                            <a href="@Url.Action("RefEntServices","Admin")">
-                                <span class="title">Enterprise Services </span>
-                            </a>
-                        </li>
-                        <li class="lvl3 @Html.ActivePage("Admin", "RefTags")">
-                            <a href="@Url.Action("RefTags","Admin")">
-                                <span class="title">Tags </span>
-                            </a>
-                        </li>
-                        <li class="lvl3 @Html.ActivePage("Admin", "RefBadge")">
-                            <a href="@Url.Action("RefBadge","Admin")">
-                                <span class="title">Badges </span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+        {
+            <li>
+                <a href="javascript:;">
+                    <i class="clip-cog-2"></i>
+                    <span class="title">Administration</span>
+                    <i class="icon-arrow"></i>
+                </a>
+                <ul class="sub-menu">
+                    <li class="@Html.ActivePage("Admin", "Users")">
+                        <a href="@Url.Action("Users","Admin")">
+                            <span class="title">Users </span>
+                        </a>
+                    </li>
+                    <li class="@Html.ActivePage("Admin", "Roles")">
+                        <a href="@Url.Action("Roles","Admin")">
+                            <span class="title">Roles </span>
+                        </a>
+                    </li>
+                    <li class="@Html.ActivePage("Admin", "Ref")">
+                        <a href="javascript:;">
+                            <span class="title">Reference Data</span>
+                            <i class="icon-arrow"></i>
+                        </a>
+                        <ul class="sub-menu">
+                            <li class="lvl3 @Html.ActivePage("Admin", "RefAgencies")">
+                                <a href="@Url.Action("RefAgencies","Admin")">
+                                    <span class="title">Agencies List </span>
+                                </a>
+                            </li>
+                            <li class="lvl3 @Html.ActivePage("Admin", "RefEntServices")">
+                                <a href="@Url.Action("RefEntServices","Admin")">
+                                    <span class="title">Enterprise Services </span>
+                                </a>
+                            </li>
+                            <li class="lvl3 @Html.ActivePage("Admin", "RefTags")">
+                                <a href="@Url.Action("RefTags","Admin")">
+                                    <span class="title">Tags </span>
+                                </a>
+                            </li>
+                            <li class="lvl3 @Html.ActivePage("Admin", "RefBadge")">
+                                <a href="@Url.Action("RefBadge","Admin")">
+                                    <span class="title">Badges </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
 
-                <li class="@Html.ActivePage("ForumAdmin", "Category")">
-                    <a href="@Url.Action("Category","ForumAdmin")">
-                        <span class="title">Forum Admin </span>
-                    </a>
-                </li>
-                <li class="@Html.ActivePage("Admin", "ImportData")">
-                    <a href="@Url.Action("ImportData","Admin")">
-                        <span class="title">Data Import/Export</span>
-                    </a>
-                </li>
-                <li class="@Html.ActivePage("Admin", "Settings")">
-                    <a href="@Url.Action("Settings","Admin")">
-                        <span class="title">Global Settings </span>
-                    </a>
-                </li>
-                <li class="lvl3 @Html.ActivePage("Admin", "SearchAdmin")">
-                    <a href="@Url.Action("SearchAdmin", "Admin")">
-                        <span class="title">Search Config </span>
-                    </a>
-                </li>
-                <li class="@Html.ActivePage("Admin", "Analytics")">
-                    <a href="https://analytics.google.com" target="_blank">
-                        <span class="title">Analytics </span>
-                    </a>
-                </li>
-            </ul>
-        </li>
-}
+                    <li class="@Html.ActivePage("ForumAdmin", "Category")">
+                        <a href="@Url.Action("Category","ForumAdmin")">
+                            <span class="title">Forum Admin </span>
+                        </a>
+                    </li>
+                    <li class="@Html.ActivePage("Admin", "ImportData")">
+                        <a href="@Url.Action("ImportData","Admin")">
+                            <span class="title">Data Import/Export</span>
+                        </a>
+                    </li>
+                    <li class="@Html.ActivePage("Admin", "Settings")">
+                        <a href="@Url.Action("Settings","Admin")">
+                            <span class="title">Global Settings </span>
+                        </a>
+                    </li>
+                    <li class="lvl3 @Html.ActivePage("Admin", "SearchAdmin")">
+                        <a href="@Url.Action("SearchAdmin", "Admin")">
+                            <span class="title">Search Config </span>
+                        </a>
+                    </li>
+                    <li class="@Html.ActivePage("Admin", "Analytics")">
+                        <a href="https://analytics.google.com" target="_blank">
+                            <span class="title">Analytics </span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        }
 
     </ul>
     <!-- end: MAIN NAVIGATION MENU -->
-</div>
+    @if (ViewBag.ShowTour == true)
+    {
+        <button id="btnTour" class="btn btn-info" style="position: fixed; left: 20px; bottom: 50px;     font-size: 18px; color: #fff; background-color:rgb(25, 156, 152)"><i class="clip-question-2"></i> Find help here</button>
+    }
+    </div>
